fix nav scroll on smaller devices

--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -41,7 +41,6 @@
 		@include max($bml) {
 			max-height: 500px;
 			overflow-y: scroll;
-			-webkit-overflow-scrolling:touch;
 		}
 	}
 
